Bug 100287 - [UI] Header and Footer controls (same content; left/right, first/other) don't update and are not independent
Summary: [UI] Header and Footer controls (same content; left/right, first/other) don't...
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
4.0.0.3 release
Hardware: All All
: medium normal
Assignee: Justin L
URL:
Whiteboard: target:26.2.0
Keywords:
: 94793 118970 149113 (view as bug list)
Depends on:
Blocks: Writer-Header-Footer
  Show dependency treegraph
 
Reported: 2016-06-09 09:53 UTC by Susobhan Ghosh
Modified: 2025-09-06 01:36 UTC (History)
6 users (show)

See Also:
Crash report or crash signature:


Attachments
<spam attachment> (42.65 KB, application/pdf)
2020-05-05 05:14 UTC, Rizwan Ali
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Susobhan Ghosh 2016-06-09 09:53:09 UTC
Two separate scenarios:
Case 1:
1) Open Writer
2) Go to Format->Page
3) Go to Header tab. Enable Header. Uncheck "Same Content on First Page" or "Same Content Left/Right"
4) Go to Footer Tab and enable Footer. Don't uncheck anything.
5) Press OK

In case of unchecking "Same Content on first page", if one checks the writer page, the First Page Header gets enabled (as expected), but First Page Footer gets enabled too (not desired). If one reopens the dialog and rechecks in Footer Tab, the "Same Content on First Page" is unchecked (which I feel shouldn't happen). Similar thing happens if the other option is unchecked (i.e. Same Content Left/Right)

Case 2:
1) Open Writer and go to Format->Page
2) Go to Footer tab.
3) Enable Footer. Uncheck "Same Content on First Page" or "Same Content Left/Right" (or both together)
4) Go to Header Tab and just enable Header (First Page and Left/Right should be checked).
5) Press OK.

Header and Footer get enabled but no other change takes place. First Page footer or Left/Right footer doesn't get activated (which should as per the options selected). They remain shared.
Comment 1 Heiko Tietze 2016-06-09 10:43:01 UTC
/confirmed (also affecting v5.1)

Steps to reproduce
1. Go to Format >  Page > 
Header > Header: on, Same Content Left/Right: on, Same Content on First Page: on
Footer > Footer: on, Same Content Left/Right: off, Same Content on First Page: off
Press Ok
2. Reopen Format >  Page
Mention that Footer > Same Content on First page = on (keep it)
Go to Header > Same content on first page and switch it off
Press Ok, reopen and find footer setting off.

-> Footer settings follow header settings. 

3. Set Header > Same Content Left/Right: on and the same setting on footer off. This changes the special header/footer tooltip in the document into "First Page Header" or "Right Page Header" (depending on what same setting is enabled). Whatever you set for header also affects the footer meaning it's a "First Page Footer" while Same Content on First Page is off (same for left/right).


Version: 5.1.3.2
Build ID: 5.1.3.2 Arch Linux build-1
CPU Threads: 8; OS Version: Linux 4.5; UI Render: default; 
Locale: de-DE (de_DE.UTF8)
Comment 2 Cor Nouws 2016-08-13 20:01:25 UTC
Thanks Susobhan,

Indeed there are maybe even more scenarios that just do not work.

It started (partially at least) with the improvement explained here:
  http://vmiklos.hu/blog/lo-firstpage-headerfooter.html

Ciao - Cor

- strange that I can't find another issue - would swear there already is one..
Comment 3 Luke Kendall 2016-10-10 03:10:12 UTC
Bug 49171?
Comment 4 QA Administrators 2017-10-23 14:03:56 UTC Comment hidden (obsolete)
Comment 5 Cor Nouws 2017-12-30 11:48:18 UTC
still the same for "Same Content on first page"
in Version: 6.1.0.0.alpha0+
Build ID: a9b202a6b7000e7af34f2a639ca207122a3968bf
CPU threads: 4; OS: Linux 4.13; UI render: default; VCL: gtk2; 
TinderBox: Linux-rpm_deb-x86_64@70-TDF, Branch:master, Time: 2017-12-26_23:09:36
Locale: nl-NL (nl_NL.UTF-8); Calc: group threaded
Comment 6 Michael Stahl 2018-03-05 11:42:00 UTC
essentially this is a UI bug - the implementation does not allow toggling footer sharing separately from header sharing, because no file format supports that.
Comment 7 Michael Stahl 2018-03-05 11:46:45 UTC
*** Bug 94793 has been marked as a duplicate of this bug. ***
Comment 8 QA Administrators 2019-03-06 03:42:27 UTC Comment hidden (obsolete)
Comment 9 Peter Winchester 2019-04-19 12:46:57 UTC Comment hidden (spam)
Comment 10 hppyromz 2020-04-23 19:42:52 UTC Comment hidden (spam)
Comment 11 Rizwan Ali 2020-05-04 11:56:27 UTC Comment hidden (spam)
Comment 12 Rizwan Ali 2020-05-04 11:57:39 UTC Comment hidden (obsolete, spam)
Comment 13 allenawell 2020-05-04 12:37:18 UTC Comment hidden (spam)
Comment 14 allenawell 2020-05-04 12:37:47 UTC Comment hidden (spam)
Comment 15 Rizwan Ali 2020-05-05 05:14:43 UTC Comment hidden (spam)
Comment 16 Xisco Faulí 2021-02-09 13:06:31 UTC
Actually, it can be set to NEW, no action done in a while
Comment 17 Aweloide 2021-05-04 12:46:53 UTC
Still happening in LO 7.1.2.2
Comment 18 Dieter 2022-05-30 19:57:17 UTC
*** Bug 118970 has been marked as a duplicate of this bug. ***
Comment 19 Dieter 2022-05-30 19:58:09 UTC
*** Bug 149113 has been marked as a duplicate of this bug. ***
Comment 20 QA Administrators 2024-05-30 03:15:40 UTC Comment hidden (obsolete, spam)
Comment 21 Justin L 2025-09-04 22:03:53 UTC
Unexpectedly, turning on the footer can disable header's first page.

1.) Open header_bug.odt (attachment 158151 [details] from duplicate bug 118970)
2.) Notice that the first page header displays "First page"
3.) Format - Page Style (do NOT visit the Header tab) - Footer - turn on footer - OK to close dialog

Actual result: First page's header is now "Verso" because it is showing the odd page header.

Expected result: Header (and footer) should show a first page, since the user did not explicitly click "Same content on first page".


As noted in comment 6 - the header and footer MUST synchronize this setting.

It is HIGHLY desirable to be able to turn sharing for BOTH on again with a single click. (It would be a disaster if the user had to go to both the header and the footer and turn on SharedFirst in both of those in order to disable "first" headers/footers.)

The above STR and follow-up comments are addressed in the proposed fix at https://gerrit.libreoffice.org/c/core/+/190606.

If both the header and footer try to set opposite values in the dialog, then the header will win out (based on testing). My patch doesn't change that. (Simply visiting the header tab is enough for it to "come into play".)
Comment 22 Commit Notification 2025-09-06 01:32:18 UTC
Justin Luth committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/11cd6b2fbc86e28506d5b26a436df1b4b2b5bf09

tdf#100287 svx dialog: sync "first header" with "first footer"

It will be available in 26.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.